test/src/e2e_vm_tests/test_programs/should_fail/type_alias_private/src/lib.sw
library;

#[allow(dead_code)]
type Alias = u64;
